<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Statitician</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_dashboard">Stat Dashboard</string>
    <string name="title_activity_start_new_game">Start A New Game</string>
    <string name="title_activity_login">Sign In</string>
    <string name="new_game_date">Date</string>
    <string name="new_game_location">Location</string>
    <string name="new_game_tournament">Tournament</string>
    <string name="new_game_home_team">Home Team</string>
    <string name="new_game_opponent">Opponent</string>
    <string name="dashboard_pass">PASS</string>
    <string name="dashboard_shot">SHOT</string>
    <string name="dashboard_steal">STEAL</string>
    <string name="dashboard_foul">FOUL</string>
    <string name="dashboard_player_goal">Player Goal</string>
    <string name="dashboard_player_assist">Player Assist</string>
    <string name="dashboard_team_goal">Team Goal</string>
    <string name="dashboard_opponent_goal">Opponent Goal</string>
    <string name="sign_in">Sign In</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="save_check">Save Info</string>
    <string name="register_check">Register</string>
    <string name="submit">Submit</string>
    <string name="main_menu">Statitician</string>
    <string name="start_new_game">Start New Game</string>
    <string name="view_stats">View Stats</string>
    <string name="edit_account">Edit Account</string>
    <string name="exit">Exit</string>
    <string name="statitician_logo">Statitician Logo</string>
    <string name="new_game">New Game</string>
    <string name="holder_one">0</string>
    <string name="holder_two">00</string>
    <string name="holder_four">0000</string>
    <string name="hint_location">Location</string>
    <string name="hint_tournament">Tournament</string>
    <string name="hint_opponent">Opponent</string>
    <string name="slash"> / </string>
    <string name="title_activity_size_test">SizeTest</string>
    <string name="logout">Log Out</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="hello_world">Hello world!</string>

</resources>
