<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/steal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#444444"
    android:shrinkColumns="&quot;*&quot;"
    android:stretchColumns="&quot;*&quot;"
    tools:context=".LoginActivity" >

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"
        android:paddingBottom="20dip"
        android:paddingLeft="60dip"
        android:paddingRight="60dip"
        android:text="@string/sign_in"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#FFFFFF"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:hint="@string/email"
        android:imeOptions="flagNavigateNext"
        android:inputType="textEmailAddress"
        android:textColor="#FFFFFF" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/email"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:hint="@string/password"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:textColor="#FFFFFF" />

    <CheckBox
        android:id="@+id/saveBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/password"
        android:layout_below="@+id/password"
        android:text="@string/save_check"
        android:textColor="#FFFFFF"
        android:textStyle="italic" />

    <CheckBox
        android:id="@+id/registerBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/title"
        android:layout_below="@+id/password"
        android:text="@string/register_check"
        android:textColor="#FFFFFF"
        android:textStyle="italic" />

    <Button
        android:id="@+id/exit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/registerBox"
        android:layout_alignRight="@+id/registerBox"
        android:layout_below="@+id/registerBox"
        android:layout_marginTop="10dp"
        android:background="@drawable/submit_button_background"
        android:text="@string/exit" />

    <Button
        android:id="@+id/submit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/title"
        android:layout_alignRight="@+id/saveBox"
        android:layout_below="@+id/saveBox"
        android:layout_marginTop="10dp"
        android:background="@drawable/submit_button_background"
        android:text="@string/submit" />

</RelativeLayout>