<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/steal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#444444"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:shrinkColumns="&quot;*&quot;"
    android:stretchColumns="&quot;*&quot;"
    tools:context=".StartNewGameActivity" >

    <AutoCompleteTextView
        android:id="@+id/location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/dateMonth"
        android:layout_alignRight="@+id/dateYear"
        android:layout_below="@+id/dateMonth"
        android:ems="10"
        android:gravity="center_horizontal"
        android:hint="@string/hint_location"
        android:imeOptions="flagNavigateNext"
        android:inputType="textCapWords"
        android:singleLine="true"
        android:textColor="#FFFFFF"
        android:textStyle="italic" >

        <requestFocus />
    </AutoCompleteTextView>

    <AutoCompleteTextView
        android:id="@+id/tournament"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/location"
        android:layout_alignRight="@+id/location"
        android:layout_below="@+id/location"
        android:gravity="center_horizontal"
        android:hint="@string/hint_tournament"
        android:imeOptions="flagNavigateNext"
        android:inputType="textCapWords"
        android:nextFocusDown="@+id/opponent"
        android:singleLine="true"
        android:textColor="#FFFFFF"
        android:textStyle="italic" />

    <AutoCompleteTextView
        android:id="@+id/opponent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tournament"
        android:layout_alignRight="@+id/tournament"
        android:layout_below="@+id/tournament"
        android:gravity="center_horizontal"
        android:hint="@string/hint_opponent"
        android:imeOptions="actionDone"
        android:inputType="textCapWords"
        android:nextFocusDown="@+id/submitButton"
        android:singleLine="true"
        android:textColor="#FFFFFF"
        android:textStyle="italic" />

    <Button
        android:id="@+id/submitButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/opponent"
        android:layout_alignRight="@+id/opponent"
        android:layout_below="@+id/opponent"
        android:layout_marginTop="20dip"
        android:background="@drawable/submit_button_background"
        android:text="@string/submit" />

    <EditText
        android:id="@+id/dateDay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:ems="5"
        android:gravity="center_horizontal"
        android:hint="@string/holder_two"
        android:inputType="number"
        android:maxLength="2"
        android:textColor="#FFFFFF"
        android:textStyle="italic" />

    <EditText
        android:id="@+id/dateYear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/slashLabel2"
        android:ems="5"
        android:gravity="center_horizontal"
        android:hint="@string/holder_four"
        android:inputType="number"
        android:maxLength="4"
        android:textColor="#FFFFFF"
        android:textStyle="italic" />

    <TextView
        android:id="@+id/slashLabel1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toLeftOf="@+id/dateDay"
        android:layout_alignParentTop="true"
        android:text="@string/slash"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/dateMonth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toLeftOf="@+id/slashLabel1"
        android:ems="5"
        android:gravity="center_horizontal"
        android:hint="@string/holder_two"
        android:inputType="number"
        android:maxLength="2"
        android:textColor="#FFFFFF"
        android:textStyle="italic" />

    <TextView
        android:id="@+id/slashLabel2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/dateDay"
        android:text="@string/slash"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        android:textStyle="bold" />

</RelativeLayout>